Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-project-deployment
  namespace: cicd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cicd-project
  template:
    metadata:
      labels:
        app: cicd-project
    spec:
      containers:
        -  name: cicd-project
           image: miloskuzmanovski/cicd-project:latest
           ports:
            - containerPort: 8000
