Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd-project-service
  namespace: cicd
spec:
  selector:
    app: cicd-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
